# gerbil-data

./: .gitattributes  .gitignore  .gitmessage  .mvn-local-settings.xml  .scalafmt.conf  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CODE_WIKI.md  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  README.md  README.md.CH  README_CH.md  SECURITY.md  SUPPORT.md  pom.xml  requirements.txt
.airflow/: airflow.cfg  airflow.db
.devcontainer/: devcontainer.json
.githooks/: commit-msg
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  scaladoc-pages.yml
.metals/: metals.lock.db  metals.mv.db
bash/: env.sh
bash/conf/: env.sh  env.sh.template  spark-base.conf
bash/driver/: ML1MDataDriver.sh  ML1MDataDriverTest.sh
bash/feature/: ML1MMovieStatFeature.sh  ML1MUserMovieRate.sh  UserMovieRateV1.sh
bash/pipeline/: AliCtrPipelineBinary.sh  ML1MPipeline.sh  ML1MPipelineBinary.sh  ML1MPipelineMulti.sh  ML1MPipelineRating.sh  ML1MPipelineTest.sh  (+1 more)
dag/: README.md  README_CH.md  ml1m_pipeline_dag.py  run_pipeline.py
examples/: gerbil-data-demo.ipynb
sql/: Hive常用命令.md  hive_common_commands.md  ml_1m_data_analysis.md  ml_1m_movie_table.sql  ml_1m_movies.sql  ml_1m_rating_table.sql  ml_1m_ratings.sql  ml_1m_user_table.sql  ml_1m_users.sql
tools/: DumpGoldenData.scala  DumpPosMapBin.scala  README.md  README_CH.md
tools/cpp_featurizer/: CMakeLists.txt  MurmurHash3.cpp  MurmurHash3.h  feature.h  featurizer.h  main.cpp  pos_map.h  sample.h  types.h
(+259 files in other folders)
